# reshallah

./: .gitignore  Dockerfile  README.md  pyproject.toml  reshallah.py  server.py  test_content.typ  typst_compiler.py
bruno/: bruno.json
mirea_report_template/: main.typ  test.typ
reshallah/: root.bru  upload.bru
src/reshallah/: cli.py  mcp_server.py  mirea_report.py  typst_compiler.py
src/reshallah/assets/: prompts.json  reshallah_guidelines.md  reshallah_project_structure.md
src/reshallah/assets/mirea_report_template/: content.typ  main.typ
template/: Makefile  macros.tex
template/Settings/: format.tex  packages.tex
typst_template/: main.typ  main_example.typ  refs.bib  simple-template.typ
typst_test/: content.typ  refs.bib  test_content.typ
