[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reshallah"
version = "0.4.3"
requires-python = ">=3.12"
dependencies = [
  "typst",
  "typer",
  "mcp",
  "asyncio",
  "requests",
  "pypdf2>=3.0.1",
]

[project.scripts]
reshallah = "reshallah.cli:cli_main"

[tool.setuptools.package-data]
reshallah = ["assets/**"]
